<resources>
    <string name="app_name">MovieDb</string>
    <string name="buttonAdd">Add</string>
    <string name="titleFix">Title</string>
    <string name="genreFix">Genre</string>
    <string name="actorsFix">Actors</string>
    <string name="ratingFix">Rating</string>
    <string name="plotFix">Plot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
